--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/googletest"]
 	path = vendor/googletest
 	url = https://github.com/google/googletest.git
+[submodule "vendor/TAUL"]
+	path = vendor/TAUL
+	url = https://github.com/TirousCoded/TAUL.git
